<resources>
    <string name="app_name">"天气"</string>
    <string name="notifyTitle"/>
    <string name="notifyMsg"/>
    <string name="cancel"/>
    <string name="setting"/>

    <string name="sunny">"晴"</string>
    <string name="mostly_sunny">"多云"</string>
    <string name="partly_sunny">"多云"</string>
    <string name="hazy_sunshine">"轻度雾霾"</string>
    <string name="mostly_cloudy">"多云"</string>
    <string name="cloudy">"多云"</string>
    <string name="dreary">"阴"</string>
    <string name="fog">"雾"</string>
    <string name="showers">"阵雨"</string>
    <string name="light_rain">"小雨"</string>
    <string name="rain">"中雨"</string>
    <string name="thunderstorms">"雷雨"</string>
    <string name="light_snow">"小雪"</string>
    <string name="mostly_cloudy_storms">"多云转雨"</string>
    <string name="partly_sunny_storms">"多云转暴雨"</string>
    <string name="flurries">"多云"</string>
    <string name="mostly_cloudy_flurries">"阵雪"</string>
    <string name="partly_sunny_flurries">"多云"</string>
    <string name="snow">"中雪"</string>
    <string name="mostly_cloudy_snow">"多云"</string>
    <string name="ice">"冻雨"</string>
    <string name="sleet">"雨夹雪"</string>
    <string name="freezing_rain">"冻雨"</string>
    <string name="rain_and_snow">"雨夹雪"</string>
    <string name="hot">"晴高温"</string>
    <string name="cold">"晴低温"</string>
    <string name="windy">"风"</string>
    <string name="clear">"晴夜"</string>
    <string name="mostly_clear">"多云"</string>
    <string name="partly_cloudy">"多云夜"</string>
    <string name="intermittent_clouds">"多云"</string>
    <string name="hazy_moonlight">"轻度雾霾"</string>
    <string name="partly_cloudy_showers">"阵雨"</string>
    <string name="mostly_cloudy_showers">"雷雨"</string>
    <string name="Partly_cloudy_storms">"雷雨"</string>
    <string name="Mostly_cloudy_flurries">"阵雪"</string>
    <string name="Mostly_cloudy_snow">"中雪"</string>
    <string name="thunderstorm_hail">"雷阵雨"</string>
    <string name="heavy_rain">"大雨"</string>
    <string name="storm">"暴雨"</string>
    <string name="heavy_storm">"大暴雨"</string>
    <string name="severe_storm">"特大暴雨"</string>
    <string name="heavy_snow">"大雪"</string>
    <string name="snow_storm">"暴雪"</string>
    <string name="dust_storm">"沙尘暴"</string>
    <string name="light2moderate_rain">"小到中雨"</string>
    <string name="moderate2heavy_rain">"中到大雨"</string>
    <string name="heavy2sever_rain">"大到暴雨"</string>
    <string name="storm2heavy_rain">"暴雨"</string>
    <string name="heavy2sever_rain1">"大暴雨"</string>
    <string name="light2moderate_snow">"小到中雪"</string>
    <string name="moderate2heavy_snow">"中到大雪"</string>
    <string name="heavy2sever_snow">"大到暴雪"</string>
    <string name="dust">"浮尘"</string>
    <string name="sand">"扬沙"</string>
    <string name="sandstorm">"强沙尘暴"</string>
    <string name="dense_foggy">"浓雾"</string>
    <string name="moderate_foggy">"强浓雾"</string>
    <string name="haze">"霾"</string>
    <string name="moderate_haze">"中度霾"</string>
    <string name="heavy_haze">"重度霾"</string>
    <string name="sever_haze">"严重霾"</string>
    <string name="heavy_foggy">"大雾"</string>
    <string name="sever_foggy">"特强浓雾"</string>
    <string name="nothing">"无"</string>

    <string name="excellent">优</string>
    <string name="fine">良</string>
    <string name="mild_concentration">轻度污染</string>
    <string name="middle_level_pollution">中度污染</string>
    <string name="heavy_pollution">重度污染</string>
    <string name="severe_contamination">严重污染</string>

    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="today">今天</string>


    //风力等级和风向
    <string name="zero_level">"0级"</string>
    <string name="one_level">"1级"</string>
    <string name="two_level">"2级"</string>
    <string name="three_level">"3级"</string>
    <string name="four_level">"4级"</string>
    <string name="five_level">"5级"</string>
    <string name="six_level">"6级"</string>
    <string name="seven_level">"7级"</string>
    <string name="eight_level">"8级"</string>
    <string name="nine_level">"9级"</string>
    <string name="ten_level">"10级"</string>
    <string name="eleven_level">"11级"</string>
    <string name="twelve_level">"12级"</string>
    <string name="wind_power">"风力"</string>
    <string name="wind_direction">"风向"</string>
    <string name="wind_power_direction">"风力风向"</string>

    //管理城市和编辑城市
    <string name="manager_city">"管理城市"</string>
    <string name="compile_city">"编辑城市"</string>
    <string name="could_not_add_more_cities">"无法添加更多城市"</string>

    <string name="accuWeather">中国天气通</string>
    <string name="now">现在</string>
    <string name="sun_rise">日出</string>
    <string name="sun_set">日落</string>

    <string name="forecast_24hour">24小时天气预报</string>
    <string name="forecast_5day">5日天气预报</string>
    <string name="comfort_level">舒适度</string>
    <string name="humidity">空气湿度</string>
    <string name="feel_likes">体感温度</string>
    <string name="uv_index">紫外线指数</string>

    //widget
    <string name="mm_dd">MM月dd日  EEEE</string>
    <string name="apm_am">上午</string>
    <string name="apm_pm">下午</string>

    //设置界面
    <string name="setting_activity">"设置"</string>
    <string name="temperature_unit">"温度单位"</string>
    <string name="auto_update">"自动更新"</string>
    <string name="update_interval">"更新间隔"</string>
    <string-array name="hours">
        <item>1小时</item>
        <item>2小时</item>
        <item>6小时</item>
        <item>12小时</item>
        <item>24小时</item>
    </string-array>
    <string name="make_sure">"确定"</string>
    <string name="make_cancel">"取消"</string>
    <string name="net_word_setting">"网络服务不可用，请进入“设置”检查"</string>
    //添加城市界面
    <string name="the_city_has_been_added">"该城市已经添加"</string>
    //editText提示语
    <string name="hint">搜索城市(中文)</string>
    <string name="add_city">添加城市</string>
    <string name="city_recommended">推荐城市</string>
    <string name="city_added_toast">该城市已添加</string>

    //紫外线等级
    <string name="uv_low">低</string>
    <string name="uv_moderate">中</string>
    <string name="uv_high">高</string>
    <string name="uv_very_high">甚高</string>
    <string name="uv_extreme">极高</string>

    <string name="gps_setting">位置服务不可用，请进入“设置”检查</string>
    <string name="no_search_result">没有匹配的结果，请检查城市名称</string>
    <string name="city_changed">定位城市发生改变</string>

    <string name="no_more_city">不能添加更多的城市</string>
    <string name="notification_title">天气</string>
    <string name="rain_notification">明天会有暴雨，请注意防范！</string>
    <string name="snow_notification">明天会有大雪，请注意防范！</string>
    <string name="wind_notification">明日会有强风，请注意防范！</string>
    <string name="uv_index_notification">明日紫外线指数过高，请注意防范！</string>
    <string name="tem_rise_notification">明天大幅升温，请适当穿衣！</string>
    <string name="tem_down_notification">明日大幅降温，请注意保暖！</string>

    <string-array name="time">
        <item>天气信息已过期</item>
        <item>昨天</item>
        <item>前天</item>
        <item>个小时前</item>
        <item>分钟前</item>
        <item>刚刚</item>
        <item>更新</item>
        <item>发布</item>
        <item>最近更新时间</item>
        <item>释放刷新</item>
        <item>下拉刷新</item>
    </string-array>

    <string-array name="city">
        <item>当前位置</item>
        <item>上海</item>
        <item>北京</item>
        <item>深圳</item>
        <item>广州</item>
        <item>杭州</item>
        <item>武汉</item>
        <item>南京</item>
        <item>西安</item>
        <item>郑州</item>
        <item>成都</item>
        <item>沈阳</item>
        <item>长春</item>
        <item>天津</item>
        <item>哈尔滨</item>
        <item>长沙</item>
        <item>福州</item>
        <item>石家庄</item>
        <item>南昌</item>
        <item>济南</item>
        <item>太原</item>
        <item>重庆</item>
        <item>合肥</item>
        <item>海口</item>
        <item>贵阳</item>
        <item>兰州</item>
        <item>昆明</item>
        <item>拉萨</item>
        <item>银川</item>
        <item>南宁</item>
        <item>乌鲁木齐</item>
        <item>呼和浩特</item>
        <item>西宁</item>
        <item>澳门</item>
        <item>香港</item>
        <item>台北</item>
    </string-array>

    <string-array name="province">
        <item>河北省</item>
        <item>河北</item>
        <item>山西省</item>
        <item>山西</item>
        <item>辽宁省</item>
        <item>辽宁</item>
        <item>吉林省</item>
        <item>吉林</item>
        <item>黑龙江省</item>
        <item>黑龙江</item>
        <item>江苏省</item>
        <item>江苏</item>
        <item>浙江省</item>
        <item>浙江</item>
        <item>安徽省</item>
        <item>安徽</item>
        <item>福建省</item>
        <item>福建</item>
        <item>江西省</item>
        <item>江西</item>
        <item>山东省</item>
        <item>山东</item>
        <item>河南省</item>
        <item>河南</item>
        <item>湖北省</item>
        <item>湖北</item>
        <item>湖南省</item>
        <item>湖南</item>
        <item>广东省</item>
        <item>广东</item>
        <item>海南省</item>
        <item>海南</item>
        <item>四川省</item>
        <item>四川</item>
        <item>贵州省</item>
        <item>贵州</item>
        <item>青海省</item>
        <item>青海</item>
        <item>台湾省</item>
        <item>台湾</item>
        <item>内蒙古自治区</item>
        <item>内蒙古</item>
        <item>广西壮族自治区</item>
        <item>广西</item>
        <item>西藏自治区</item>
        <item>西藏</item>
        <item>宁夏回族自治区</item>
        <item>宁夏</item>
        <item>新疆维吾尔自治区</item>
        <item>新疆</item>
    </string-array>
</resources>
