<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_setting"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="14sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <Button android:id="@+id/btn_gps_back"
            android:text="@string/make_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/shape_button"
            android:textSize="14sp"
            android:textAllCaps="false"/>

        <Button android:id="@+id/btn_gps_setting"
            android:text="@string/setting_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/shape_button"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>