<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_setting_cancle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back"
            />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/iv_setting_cancle"
            android:text="@string/setting_activity"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_temperature_unit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="12dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_chevron_right"/>

        <TextView
            android:id="@+id/txt_temperature_unit"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="28dp"
            android:gravity="center"
            android:text="°C"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/temperature_unit"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#99ffffff"/>

    <RelativeLayout
        android:id="@+id/rl_update"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/auto_update"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"/>

        <Switch
            android:id="@+id/sw_update"
            android:layout_width="34dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:clickable="false"
            android:checked="false"
            android:track="@null"
            android:thumb="@null"
            android:background="@drawable/switch_update"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#99ffffff"/>

    <RelativeLayout
        android:id="@+id/rl_update_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        >

        <TextView
            android:id="@+id/txt_update_time_un"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/update_interval"
            android:textColor="#FFFFFFFF"
            android:textSize="14sp"/>

        <ImageView
            android:id="@+id/img_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_chevron_right"
            />

        <TextView
            android:id="@+id/txt_update_time"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="28dp"
            android:gravity="center"
            android:textColor="#FFFFFFFF"
            android:textSize="12sp"/>

    </RelativeLayout>

    <View
        android:id="@+id/view_divide"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#99ffffff"/>

</LinearLayout>
